--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
             "php": "7.1"
         }
     },
+    "replace": {
+        "civicrm/composer-compile-plugin": "0.16"
+    },
     "require": {
         "composer-plugin-api": "^1.1 || ^2.0",
         "php": ">=7.1",
